week 3 learn and teach
